[package]
name = "yet_another_stalker_unpacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
delharc = { path = "../rust-delharc", features = ["lh1"] }
byteorder = "1.5.0"
futures = "0.3.30"
encoding_rs = "0.8.33"
regex = "1.10.2"